editing fees and home

--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -78,9 +78,9 @@
 </header>
 
 
-<section class="fill fya fade_60 woah">
+<section class="fill fya fade_60 yeah">
 	<p>Fee Guide</p>
-	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Show me the money</a>
+	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Starting points</a>
 </section>
 
 
