--- a/htdocs/services.html
+++ b/htdocs/services.html
@@ -85,16 +85,15 @@
 <article class="reverse red" id="truth">
 	<div class="constrain">
 		<h2>Services</h2>
-		<h3 class="subhead">The translation point between intent and disruptive strategy.</h3>
-		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of disruption, work culture and new-school digital engagement.</p>
-		<p>Bringing together stakeholders to push organisations towards all those lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge, leadership can spur agile, productive change.</p>
+		<h3 class="subhead">Translation between intent and disruptive strategy.</h3>
+		<p>Pushing disparate stakeholders towards lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge and take-home toolkit, we can spur agile, productive change.</p>
+		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p>
 		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
 		<dl>
 			<dt>1</dt><dd>Digital strategy</dd>
 			<dt>2</dt><dd>Leadership development</dd>
 			<dt>3</dt><dd>Rapid prototyping</dd>
 			<dt>4</dt><dd>Lean and Agile methodology</dd>
-			<dt>5</dt><dd>Comms and brand strategy</dd>
 			<dt>6</dt><dd>Application development</dd>
 			<dt>7</dt><dd>Digital transformation</dd>
 			<dt>7</dt><dd>User Experience Design</dd>			
@@ -118,7 +117,7 @@
 
 </section>
 
-<article>
+<article id="grace">
 	<div class="constrain">
 		<h2>Grace notes</h2>
 		<h3 class="subhead">It often kicks off with a keynote, master class or provocation.</h3>
