--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -78,7 +78,7 @@
 </header>
 
 
-<section class="fill fya fade_60 yeah">
+<section class="fill fya fade_60 cash">
 	<p>Fee Guide</p>
 	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Starting points</a>
 </section>
@@ -94,6 +94,16 @@
 			<dt>3</dt><dd>Full day workshop <span class="costs">$11,000 <small>+ GST</small></span></dd>
 			<dt>4</dt><dd>Themeweaving** <span class="costs">$9,000 <small>+ GST</small></span></dd>
 		</dl>
+		<h3>No fee projects</h3>
+		<p>I sometimes do gigs free / low cost if it aligns with my other projects for that year. 2015 is all about <a href="http://fitzroygsd.com/" target="_blank">education</a>. </p>
+		<p>E.g.
+			<a href="http://www.thedolectures.com/" target="_blank">Do Lectures</a>, 
+			<a href="http://startupweekend.org/" target="_blank">Startup Weekend</a>, 
+			<a href="http://www.pausefest.com.au/" target="_blank">Pausefest</a>.
+		</p>
+		<p>The rule of thumb is <em>&ldquo;if you&rsquo;re getting paid, so am I.&rdquo;</em></p>
+
+		<hr>
 		<h3>No-so-fine print</h3>
 		<p>Professional services fees are provided as a guide for budgeting purposes and may vary according to your outcome goals. Amounts quoted do not allow for personal expenses directly related to the activity (such as transportation and accommodation) and should be added where appropriate.</p>
 		<p>Prices quoted in Australian Dollars. Special rates may apply for education and non-profit organisations, and for multiple/bundled bookings.</p>
