--- a/htdocs/services.html
+++ b/htdocs/services.html
@@ -84,22 +84,39 @@
 
 <article class="reverse red" id="truth">
 	<div class="constrain">
-		<h2>Services</h2>
-		<h3 class="subhead">Translation between intent and disruptive strategy.</h3>
-		<p>Pushing disparate stakeholders towards lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge and take-home toolkit, we can spur agile, productive change.</p>
-		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p>
+		<h2>Go go go.</h2>
+		<h3 class="subhead">The critical translation point between intent and  strategy.</h3>
+		<p>Pushing disparate stakeholders towards lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge and a take-home toolkit, we can spur agile, productive change.</p>
+<!-- 		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p> -->
 		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
 		<dl>
 			<dt>1</dt><dd>Digital strategy</dd>
 			<dt>2</dt><dd>Leadership development</dd>
 			<dt>3</dt><dd>Rapid prototyping</dd>
 			<dt>4</dt><dd>Lean and Agile methodology</dd>
-			<dt>6</dt><dd>Application development</dd>
-			<dt>7</dt><dd>Digital transformation</dd>
+			<dt>5</dt><dd>Application development</dd>
+			<dt>6</dt><dd>Digital transformation</dd>
 			<dt>7</dt><dd>User Experience Design</dd>			
+			<dt>8</dt><dd>Innovation and disruption</dd>
 		</dl>
+		<p>Typical keynote topics include:</p>
+		<dl>
+			<dt>1</dt><dd><strong>The Future of Digital:</strong> Where the internet / mobile  is taking us and resulting horizon questions</dd>
+			<dt>2</dt><dd><strong>Disruption:</strong> How innovative disruption works, when to be scared, and what it means for leadership</dd>
+			<dt>3</dt><dd><strong>The geeky approach:</strong> How tech geeks solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture.)</dd>
+			<dt>4</dt><dd><strong>User Experience Design:</strong> Designing products for end users, user centric design / design thinking / digital + mobile-first platforms, etc.</dd>
+			<dt>6</dt><dd><strong>Rapid Prototyping:</strong> The art of making real things instead of writing documentation</dd>
+			<dt>7</dt><dd><strong>Innovation Culture:</strong> Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation.</dd>
+		</dl>
+		
+		
+
+
+
+
+
 		<blockquote>
-			<q>&ldquo;Will makes all that tech wisdom accessible and meaningful to savvy leaders. It works.&rdquo;</q>
+			<q>&ldquo;Will makes tech accessible &amp; meaningful to leadership.&rdquo;</q>
 			<cite>
 				<img src="design/images/people/jason.png" alt="Jason">
 				- Dr. Jason Fox
