--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<!-- general metadata -->
-	<title>Services - Will Dayble</title>
+	<title>Wood - Will Dayble</title>
 	<meta name="keywords" content="Squareweave, Digital Technology, Web Development, Social Good, Social Impact, Social Enterprise, Startup, Digital Solutions, Innovation, Digital Partnership, Mobile App Development, OurSay, Fitzroy GSD">
 	<meta name="description" content="Molotovs flung and keynotes spoken">
 	<link rel="shortcut icon" href="http://willdayble.com/design/images/dude.png">
@@ -57,7 +57,7 @@
 </p>
 <![endif]-->
 
-<header class="js_header"> <!-- data-spy="affix" data-offset-top="2" -->
+<header class="js_header wood"> <!-- data-spy="affix" data-offset-top="2" -->
 	<div class="constrain">
 		<a class="btn btn-default logo" href="/">Will Dayble</a>
 
@@ -76,78 +76,63 @@
 
 </header>
 
-<section class="fill fya fade_60 yeah">
-	<p>Services</p>
-	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Keynotes &amp; grace notes</a>
+<section class="fill wood">
+	<p>I want your wood</p>
+	<a class="btn" href="#wood"><i class="ss-gizmo ss-navigatedown"></i> Do you have wood?</a>
 </section>
 
-<article class="reverse red" id="truth">
+<article class="" id="wood">
 	<div class="constrain">
-		<h2>Go go go.</h2>
-		<h3 class="subhead">The critical translation point between intent and  strategy.</h3>
-		<p>Pushing disparate stakeholders towards lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge and a take-home toolkit, we can spur agile, productive change.</p>
-<!-- 		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p> -->
-		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
+		<h2>Got wood?</h2>
+
+		<div class="progress progress-wood" data-spy="affix">
+			<div class="progress-bar progress-bar-success" style="width:5%;"></div>
+			<div class="perc" style="width:100%;">5% of 319m<sup>2</sup> collected</div>
+		</div>
+		<h3>I am renovating a house. </h3>
+		<p>I&rsquo;d like the wooden bits of said house to be made entirely from recycled or reclaimed material.</p>
+		<p>If you are willing to give me wood, of any quality, in any quantity, I will gladly take it all.</p>
+		<p>I&rsquo;ll even take pictures of what I do with it for you.</p>
+		<p>I am willing to write your name on whatever your wood goes into, by way of thanks. Also, possibly, for posterity.</p>
+		<hr>
+		<p>Some ways I&rsquo;ll use your wood:</p>
 		<dl>
-			<dt>1</dt><dd>Digital strategy</dd>
-			<dt>2</dt><dd>Leadership development</dd>
-			<dt>3</dt><dd>Rapid prototyping</dd>
-			<dt>4</dt><dd>Lean and Agile methodology</dd>
-			<dt>5</dt><dd>Application development</dd>
-			<dt>6</dt><dd>Digital transformation</dd>
-			<dt>7</dt><dd>User Experience Design</dd>			
-			<dt>8</dt><dd>Innovation and disruption</dd>
+			<dt>1</dt><dd>Planter boxes;</dd>
+			<dt>2</dt><dd>A large dining table;</dd>
+			<dt>3</dt><dd>Wine, book and video game storage;</dd>
+			<dt>4</dt><dd>Kitchen counters and shelves;</dd>
+			<dt>5</dt><dd>Window frames;</dd>
+			<dt>6</dt><dd>Structural support;</dd>
+			<dt>7</dt><dd>A staircase;</dd>			
+			<dt>8</dt><dd>One bookshelf with a slidey ladder;</dd>						
+			<dt>8</dt><dd>Some lamps;</dd>						
+			<dt>10</dt><dd>And, of course, decking.</dd>
 		</dl>
-		<p>Typical keynote topics include:</p>
-		<dl>
-			<dt>1</dt><dd><strong>The Future of Digital:</strong> Where the internet / mobile  is taking us and resulting horizon questions</dd>
-			<dt>2</dt><dd><strong>Disruption:</strong> How innovative disruption works, when to be scared, and what it means for leadership</dd>
-			<dt>3</dt><dd><strong>The geeky approach:</strong> How tech geeks solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture.)</dd>
-			<dt>4</dt><dd><strong>User Experience Design:</strong> Designing products for end users, user centric design / design thinking / digital + mobile-first platforms, etc.</dd>
-			<dt>6</dt><dd><strong>Rapid Prototyping:</strong> The art of making real things instead of writing documentation</dd>
-			<dt>7</dt><dd><strong>Innovation Culture:</strong> Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation.</dd>
-		</dl>
-		
-		
-
-
-
-
 
 		<blockquote>
-			<q>&ldquo;Will makes tech accessible &amp; meaningful to leadership.&rdquo;</q>
+			<q>&ldquo;Will wants, deserves, &amp; can handle all the wood you can give him.&rdquo;</q>
 			<cite>
 				<img src="design/images/people/jason.png" alt="Jason">
 				- Dr. Jason Fox
 				<a href="http://www.drjasonfox.com/" class="role">Motivation Scientist</a>
 			</cite>
 		</blockquote>			
-		<hr>
 	</div>
 </article>
 
-<section class="feat clearfix" id="video">
-	<a href="https://www.youtube.com/watch?v=yikqgUlWBZ4" target="_blank"><img src="design/images/feat/do.jpg" alt="dangerous"><i class="ss-social ss-youtube"></i></a>
-	<a href="https://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank"><img src="design/images/feat/drunk.jpg" alt="drunk"><i class="ss-social ss-youtube"></i></a>
-	<a href="https://www.youtube.com/watch?v=zI9esN3BqbI" target="_blank"><img src="design/images/feat/iapp.jpg" alt="iapp"><i class="ss-social ss-youtube"></i></a>
-
-</section>
-
-<article id="grace">
+<article class="reverse red">
 	<div class="constrain">
-		<h2>Grace notes</h2>
-		<h3 class="subhead">It often kicks off with a keynote, master class or provocation.</h3>
-		<p>In a world rife with hype, buzz phrases and impostor syndrome, I bring a fresh, untethered approach to fuzzy topics like innovation and digital disruption.</p>
-		<p>If you&rsquo;re organising an event with switched on people who are over impractical mountaintop experiences, I can offer something grounded and pragmatic, based upon the latest in tech, design and the future of work.</p>
-		<p>Whether it&rsquo;s working with you to set the tone, or closing out with a workshoppy keynote including practical tools and perspectives, I&rsquo;m big on events being the first move in progress towards something great.</p>
-		<hr>
-		<h2>Get started</h2>
-		<p>Ping me via <a href="mailto:will@willdayble.com">will@willdayble.com</a> with the following:</p>
+		<h2>Give me wood</h2>
+		<h3 class="subhead"><a href="mailto:wood@willdayble.com">wood@willdayble.com</a></h3>
+		<p>Let me know these things:</p>
 		<dl>
-			<dt>1</dt><dd>Timing for your event</dd>
-			<dt>2</dt><dd>An understanding of the audience size and type</dd>
-			<dt>3</dt><dd>Behavioural impetus and outcomes. What do we want people <em>doing</em> as a result of this event in the months to come? (This bit is important)</dd>
-		</dl>		
+			<dt>1</dt><dd>Where your wood is (near Melbourne is best);</dd>
+			<dt>2</dt><dd>How much wood you have;</dd>
+			<dt>3</dt><dd>If you&rsquo;re willing to show me pictures.</dd>
+		</dl>
+		<p>That&rsquo;s <a href="mailto:wood@willdayble.com">wood@willdayble.com</a>.</p>
+		<p>Please and thank you.</p>
+		<p><em>- W.</em></p>
 	</div>
 </article>
 
