--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -90,9 +90,9 @@
 			<div class="perc" style="width:100%;">5% of 319m<sup>2</sup> collected</div>
 		</div>
 		<h3>I am renovating a house. </h3>
-		<p>I&rsquo;d like the wooden bits of said house to be made entirely from recycled or reclaimed material.</p>
+		<p>I&rsquo;d like the wooden bits of this house to be made entirely from recycled or reclaimed material.</p>
 		<p>If you are willing to give me wood, of any quality, in any quantity, I will gladly take it all.</p>
-		<p>I&rsquo;ll even take pictures of what I do with it for you.</p>
+		<p>I&rsquo;ll even give you pictures of what I do with it.</p>
 		<p>I am willing to write your name on whatever your wood goes into, by way of thanks. Also, possibly, for posterity.</p>
 		<hr>
 		<p>Some ways I&rsquo;ll use your wood:</p>
