--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -78,7 +78,7 @@
 
 <section class="fill wood">
 	<p>I want your wood</p>
-	<a class="btn" href="#wood"><i class="ss-gizmo ss-navigatedown"></i> Do you have wood?</a>
+	<a class="btn" href="#wood"><i class="ss-gizmo ss-navigatedown"></i> Show me it</a>
 </section>
 
 <article class="" id="wood">
