--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -103,6 +103,7 @@
 
 <article class="aboot">
 	<div class="constrain">
+		<div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div>
 		<h3>Will is a tech geek turned social entrepreneur.</h3>
 		<p>He delivers keynotes and masterclasses on digital disruption, tech strategy and leadership issues with Fortune 500s, the third sector and the social startup community.</p>
 		<p>2015 is all about <a href="//fitzoygsd.com">questioning how we educate</a> people.</p>
