--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -44,8 +44,9 @@
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
 	
-	<script type="text/javascript" src="//use.typekit.net/qiw1pfm.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	<script src="//use.typekit.net/tqj4fyp.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
+
 	
 </head>
 
