--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -31,10 +31,23 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="author" content="willdayble.com">
 
-	<link rel="shortcut icon" href="design/images/ico/favicon.ico">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://willdayble.com/design/images/dude.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://willdayble.com/design/images/dude.png">
-	<link rel="apple-touch-icon-precomposed" href="http://willdayble.com/design/images/dude.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="design/images/ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="design/images/ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="design/images/ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="design/images/ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="design/images/ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="design/images/ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="design/images/ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="design/images/ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="design/images/ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="design/images/ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="design/images/ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="design/images/ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="design/images/ico/favicon-16x16.png">
+	<link rel="manifest" href="design/images/ico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="design/images/ico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 			
 	<!-- stoled from SQW -->
