make better decisions Will, blah

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -109,7 +109,7 @@
 
 <article class="ego reverse red">
 	<div class="constrain">
-		<h1 class="js_rotator">Digital disruption in human terms.</h1>
+		<h1 class="js_rotator">Here&rsquo;s an idea: Stop fucking about.</h1>
 	</div>
 </article>
 
