speaking, not services

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -81,7 +81,7 @@
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
 <!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
 				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="services">Services</a>
+				<a class="btn btn-default" href="speaking">Speaking</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
 			</div>
 		</nav>
@@ -107,10 +107,15 @@
 </article>
 -->
 
+<!--
 <article class="ego reverse red">
 	<div class="constrain">
 		<h1 class="js_rotator">Getting shit done.</h1>
 	</div>
+</article>
+-->
+
+<article class="ego">
 </article>
 
 <article class="aboot">
