--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -81,7 +81,7 @@
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
 <!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
 				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="services">Services</a>
+				<a class="btn btn-default" href="speaking">Speaking</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
 			</div>
 		</nav>
@@ -90,15 +90,15 @@
 </header>
 
 <section class="fill fya fade_60 yeah">
-	<p>Services</p>
-	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Keynotes &amp; grace notes</a>
+	<p>Rant &amp; Rave</p>
+	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Keynotes, grace notes</a>
 </section>
 
 <article class="reverse red" id="truth">
 	<div class="constrain">
 		<h2>Go go go.</h2>
 		<h3 class="subhead">The critical translation point between intent and  strategy.</h3>
-		<p>Pushing disparate stakeholders towards lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge and a take-home toolkit, we can spur agile, productive change.</p>
+		<p>Pushing folks towards those lovely buzzwords like &lsquo;innovation&rsquo; is tricky, but with the right nudge and a take-home toolkit, stuff can get done.</p>
 <!-- 		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p> -->
 		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
 		<dl>
