--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -121,9 +121,9 @@
 <article class="aboot">
 	<div class="constrain">
 		<div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div>
-		<h3>Will is a tech geek turned social entrepreneur.</h3>
-		<p>He delivers keynotes and masterclasses on digital disruption, tech strategy and leadership issues with Fortune 500s, the third sector and the social startup community.</p>
-		<p>2015 is all about <a href="//fitzoygsd.com">questioning how we educate</a> people.</p>
+		<h3>Will is an entrepreneur.</h3>
+		<p>He delivers <a href="speaking">keynotes</a> to big companies and starts small ones.</p>
+		<p>2015 is all about <a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>.</p>
 		<p>In his spare time he doesn&rsquo;t have any.</p>
 	</div>
 </article>
