--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -121,7 +121,7 @@
 <article class="aboot">
 	<div class="constrain">
 		<div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div>
-		<h3>Will is an entrepreneur.</h3>
+		<h3>Will is an entrepreneur and teacher.</h3>
 		<p>He delivers <a href="speaking">keynotes</a> to big companies and starts small ones.</p>
 		<p>2015 is all about <a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>.</p>
 		<p>In his spare time he doesn&rsquo;t have any.</p>
