charlie is love

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -120,9 +120,10 @@
 
 <article class="aboot">
 	<div class="constrain">
-		<div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div>
-		<h3>Will is an entrepreneur and teacher.</h3>
-		<p>He delivers <a href="speaking">keynotes</a> to big companies and starts small ones.</p>
+		<!-- <div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div> -->
+		<div class="circleshot"><img src="design/images/bio/will-dayble-headshot.jpg" alt="A face"></div>
+		<h3>Will is an entrepreneur, <br>learning to be a teacher.</h3>
+		<p>He blurts <a href="speaking">keynotes</a> at big companies and starts small ones.</p>
 		<p>2015 is all about <a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>.</p>
 		<p>In his spare time he doesn&rsquo;t have any.</p>
 	</div>
@@ -131,6 +132,7 @@
 
 <article class="clientfolk">
 	<div class="constrain">
+<!--
 		<h2>Clients include</h2>
 		<div class="row clients">
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/suncorp.jpg" alt="image"></div>		
@@ -147,12 +149,25 @@
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/slv.jpg" alt="image"></div>
 		</div>	
 		<hr>
+-->
+<!--
 		<blockquote>
 			<q>&ldquo;Will Dayble speaks with true depth &amp; difference on the intersection between technology &amp; humanity&rdquo;</q>
 			<cite>
 				<img src="design/images/people/trevor.png" alt="Trevor">
 				- Trevor Hughes, CEO
 				<span class="role">International Association of Privacy Professionals</span>
+			</cite>
+		</blockquote>
+		<hr>
+-->
+		<blockquote>
+			<q>&ldquo;Will is arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.</q>
+			<q>Work with him. You will not regret it.&rdquo;</q>
+			<cite>
+				<img src="design/images/people/charlie.png" alt="Trevor">
+			<a class="role" href="https://twitter.com/superhighfives">- Charlie Gleason</a>
+				<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
 			</cite>
 		</blockquote>		
 
