hax hax hax copy

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -122,8 +122,7 @@
 	<div class="constrain">
 		<!-- <div class="flame"><img src="design/images/willdayble/logo-grey.png" alt="Flame"></div> -->
 		<div class="circleshot"><img src="design/images/bio/will-dayble-headshot.jpg" alt="A face"></div>
-		<h3>Will is an entrepreneur, <br>learning to be a teacher.</h3>
-		<p>He blurts <a href="speaking">keynotes</a> at big companies and starts small ones.</p>
+		<p>Will blurts <a href="speaking">keynotes</a> at big companies and starts small ones.</p>
 		<p>2015 is all about <a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>.</p>
 		<p>In his spare time he doesn&rsquo;t have any.</p>
 	</div>
