--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -176,16 +176,14 @@
 
 <article class="projects">
 	<div class="constrain">
-		<h2>Projects</h2>
+		<h2>Work</h2>
 		<div class="row clients">
-			<div class="col-xs-4 col-sm-3 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//allcaps.fm"><img src="design/images/projects/allcaps.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image"></a></div>			
-			<div class="col-xs-4 col-sm-3 col"><a href="//shift.vc"><img src="design/images/projects/shift.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//bankai.fm"><img src="design/images/projects/bankai.png" alt="image"></a></div>
+			<div class="col-xs-6 col-sm-4 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
+			<div class="col-xs-6 col-sm-4 col"><a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image"></a></div>
+			<div class="col-xs-6 col-sm-4 col"><a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image"></a></div>
+			<div class="col-xs-6 col-sm-4 col"><a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image"></a></div>
+			<div class="col-xs-6 col-sm-4 col"><a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image"></a></div>			
+			<div class="col-xs-6 col-sm-4 col"><a href="//soundcloud.com/bankai"><img src="design/images/projects/bankai.png" alt="image"></a></div>
 		</div>	
 	</div>
 </article>
