bah remove everything

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -99,7 +99,7 @@
 		<h2>Go go go.</h2>
 		<h3 class="subhead">The critical translation point between intent and  strategy.</h3>
 		<p>Pushing folks towards those lovely buzzwords like &lsquo;innovation&rsquo; is tricky, but with the right nudge and a take-home toolkit, stuff can get done.</p>
-<!-- 		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of digital, new-school working culture and collaborative leadership.</p> -->
+
 		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
 		<dl>
 			<dt>1</dt><dd>Digital strategy</dd>
@@ -120,15 +120,9 @@
 			<dt>6</dt><dd><strong>Rapid Prototyping:</strong> The art of making real things instead of writing documentation</dd>
 			<dt>7</dt><dd><strong>Innovation Culture:</strong> Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation.</dd>
 		</dl>
-		
-		
-
-
-
-
 
 		<blockquote>
-			<q>&ldquo;Will makes tech accessible &amp; meaningful to leadership.&rdquo;</q>
+			<q>&ldquo;Will makes technology accessible &amp; meaningful to leadership.&rdquo;</q>
 			<cite>
 				<img src="design/images/people/jason.png" alt="Jason">
 				- Dr. Jason Fox
