blah language blah

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -141,7 +141,8 @@
 
 	<h2>Speaking</h2>
 	<p>I design and facilitate presentations, interventions and workshops along these broad themes.</p>
-	<dl>
+	<!--
+<dl>
 		<dt>1</dt><dd>Innovation and disruption</dd>
 		<dt>2</dt><dd>Entrepreneurship</dd>
 		<dt>3</dt><dd>Near-future proofing</dd>
@@ -152,6 +153,7 @@
 		<dt>8</dt><dd>Innovation and disruption</dd>
 	</dl>
 	<h3>Typical topics include</h3>
+-->
 	<dl>
 		<dt>1</dt><dd>The Future of Digital: Where the internet / mobile  is taking us and resulting horizon questions;</dd>
 		<dt>2</dt><dd>Disruption: How innovative disruption works, when to be scared, and what it means for leadership;</dd>
@@ -159,6 +161,7 @@
 		<dt>4</dt><dd>User Experience Design: Designing products for end users, user centric design / design thinking / digital + mobile-first platforms;</dd>
 		<dt>6</dt><dd>Getting things done: The subtle art of making real things instead of writing business plans;</dd>
 		<dt>7</dt><dd>Innovation Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
+		<dt>8</dt><dd>Social impact: Doing good while doing well, within a business context, for measurable social impact;</dd>		
 	</dl>
 </article> 
 
