--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -49,19 +49,15 @@
 	<meta name="msapplication-TileImage" content="design/images/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-
 			
 	<!-- stoled from SQW -->
-	<link rel="stylesheet" type="text/css" href="design/css/go.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/hax.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
+	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
 			
-	<!--[if IE ]><!-- Design Element 'ie' not found --><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
-	
-	<script src="//use.typekit.net/tqj4fyp.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
-
 	
 </head>
 
@@ -73,121 +69,58 @@
 </p>
 <![endif]-->
 
-<header class="js_header"> <!-- data-spy="affix" data-offset-top="2" -->
-	<div class="constrain">
-		<a class="btn btn-default logo" href="/">Will Dayble</a>
 
-		<nav class="pull-right">
-			<a class="btn btn-default btn-menu js_menu_trigger"><span class="text">Menu</span> <i class="ss-gizmo ss-rows"></i><i class="ss-gizmo ss-delete"></i></a>
-			<div class="drop">
-				<a class="btn btn-default btn-icon" href="//twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
-				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
-<!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
-				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="speaking">Speaking</a>
-				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
-			</div>
-		</nav>
-	</div>
-
-</header>
+<aside class="money"></aside>
 
 
-<section class="fill fya fade_60 cash">
-	<p>Fee Guide</p>
-	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Starting points</a>
-</section>
-
-
-<article class="reverse blue" id="fees">
-	<div class="constrain">
+<article id="fees">
+		<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+		<a data-nav class="btn btn-next" href="#go"><i class="ss-right"></i> Get started</a>
 		<h2>Fees</h2>
-		<h3 class="subhead">The indicators below are a good guide for budgeting purposes.</h3>
+		<h3>The indicators below are a good guide for budgeting purposes.</h3>
 		<dl>
-			<dt>1</dt><dd>Keynote presentation* <span class="costs">$6,500 <small>+ GST</small></span></dd>
-			<dt>2</dt><dd>Half day workshop <span class="costs">$8,000 <small>+ GST</small></span></dd>
+			<dt>1</dt><dd>Keynote presentation* <span class="costs">$7,000 <small>+ GST</small></span></dd>
+			<dt>2</dt><dd>Half day workshop <span class="costs">$8,000 - $10,000 <small>+ GST</small></span></dd>
 			<dt>3</dt><dd>Full day workshop <span class="costs">$11,000 <small>+ GST</small></span></dd>
-			<dt>4</dt><dd>Themeweaving** <span class="costs">$9,000 <small>+ GST</small></span></dd>
+			<dt>4</dt><dd>Event Guide** <span class="costs">$11,000 <small>+ GST</small></span></dd>
 		</dl>
 		<h3>No fee projects</h3>
 		<p>I sometimes do gigs free / low cost if it aligns with my other projects for that year. 2015 is all about <a href="http://fitzroygsd.com/" target="_blank">education</a>. </p>
-		<p>E.g.
-			<a href="http://www.thedolectures.com/" target="_blank">Do Lectures</a>, 
-			<a href="http://startupweekend.org/" target="_blank">Startup Weekend</a>, 
-			<a href="http://www.pausefest.com.au/" target="_blank">Pausefest</a>.
-		</p>
 
-		<hr>
 		<h3>No-so-fine print</h3>
 		<p>Professional services fees are provided as a guide for budgeting purposes and may vary according to your outcome goals. Amounts quoted do not allow for personal expenses directly related to the activity (such as transportation and accommodation) and should be added where appropriate.</p>
 		<p>Prices quoted in Australian Dollars. Special rates may apply for education and non-profit organisations, and for multiple/bundled bookings.</p>
-		<p>International engagements are usually more involving, and may attract a higher fee.</p>
-		<hr>		
-		<p><em><strong>*</strong> For multi-day bookings, Will is also available to serve as a themeweaver for the event at favourable rates.</em></p>
-		<p><em><strong>**</strong> <em>Themeweaving</em> is like having an MC with a built in Keynote. I&rsquo;ll guide event introductions, speaking, thanks to sponsors, Q+A and then wrap it all up with a keynote touching on key themes of the day.</em></p>
-
-
-
-	</div>
-</article>
-
-<section class="feat clearfix" id="video">
-	<a href="https://www.youtube.com/watch?v=yikqgUlWBZ4" target="_blank"><img src="design/images/feat/do.jpg" alt="dangerous"><i class="ss-social ss-youtube"></i></a>
-	<a href="https://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank"><img src="design/images/feat/drunk.jpg" alt="drunk"><i class="ss-social ss-youtube"></i></a>
-	<a href="https://www.youtube.com/watch?v=zI9esN3BqbI" target="_blank"><img src="design/images/feat/iapp.jpg" alt="iapp"><i class="ss-social ss-youtube"></i></a>
-<!--
-	<a href="#"><img src="design/images/feat/knight.jpg" alt="knight"><i class="ss-gizmo ss-document"></i></a>
-	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
-	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
--->
-</section>
-
-<article>
-	<div class="constrain">
-		<h2>Get started</h2>
-		<p>Ping me via <a href="mailto:will@willdayble.com">will@willdayble.com</a> with the following:</p>
-		<dl>
-			<dt>1</dt><dd>Timing for your event</dd>
-			<dt>2</dt><dd>An understanding of the audience size and type</dd>
-			<dt>3</dt><dd>Behavioural impetus and outcomes. What do we want people <em>doing</em> as a result of this event in the months to come? (This bit is important)</dd>
-		</dl>		
-	</div>
+		<p>International engagements can sometimes attract a higher fee.</p>
+		<p><em><strong>*</strong> For multi-day bookings, Will is also available to serve as an event guide at favourable rates.</em></p>
+		<p><em><strong>**</strong> <em>Event Guide</em> is like having an MC with a built in Keynote. I&rsquo;ll guide event introductions, speaking, thanks to sponsors, Q+A and then wrap it all up with a keynote touching on key themes of the day.</em></p>
 </article>
 
 
-
-<footer id="contact">
-	<div class="constrain">
-		<!-- <a class="brand spinme" href="/">Truth</a> -->
-		<p class="contact">
-			<a href="tel:+1300771337"><i class="ss-gizmo ss-mail"></i>will@willdayble.com</a>
-		</p>
-		<p class="social">
-			<a href="//www.facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook"></i>Facebook</a>
-			<a href="//www.twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i>Twitter</a>			
-			<a href="//www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i>LinkedIn</a>
-		</p>
-	</div>
-</footer>
+<article class="alt" id="go">
+	<h2>Get started</h2>
+	<p>Ping me via <a href="mailto:will@willdayble.com">will@willdayble.com</a> with the following:</p>
+	<dl>
+		<dt>1</dt><dd>When and where is the event?</dd>
+		<dt>2</dt><dd>What is the audience size and type?</dd>
+		<dt>3</dt><dd>What is the big problem we are going to solve?</dd>
+		<dt>4</dt><dd>What behavioural outcomes are we after? What do we want people <em>doing</em> as a result of this event in the months to come?</dd>
+	</dl>		
+</article>
 
 
-<!-- FOOTER -->
-<!-- vendor / library js -->
-<script src="design/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<article id="contact">
+	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+	<h2>Contact</h2>
+	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> /willdayble</a></p>
+</article>
 
 
-<script src="design/js/affix.js" type="text/javascript"></script>
-
-<!-- app javascript -->
-
-
-
-
-<!-- cached scripts enabled -->
-<script src="design/js/sqw.js" type="text/javascript"></script>
-<!-- <script type="text/javascript">$.extend(true, app, {"facebook":{"enabled":false},"responder":"static","user":{"exists":false},"nonce":"q-8ZZwfXs5HdNlY2TZhHd4$wM78FGh34W$NcsahDhy_fDLgkSLu_VjgVbcAs1DhE","url":"\/","typekit":{"enabled":false},"bugherd":{"enabled":false},"ga":{"enabled":true,"id":"UA-5821577-1","domain":null}});</script> -->
-
+<!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
+<script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
+	/* groogles */
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -195,7 +128,6 @@
 
   ga('create', 'UA-5821577-9', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 </body>
