--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -107,6 +107,13 @@
 	</dl>		
 </article>
 
+<article class="" id="pics">
+	<h2>Pictures</h2>
+	<p>Feel free to use the following pictures in your collateral. Click to open hi res.</p>
+	<p><a href="design/images/bio/will-dayble-by-mark-lobo.jpg" target="_blank"><img src="design/images/bio/will-dayble-by-mark-lobo.jpg" alt="will-dayble-by-mark-lobo" width="420" height="280"></a>
+	<p><a href="design/images/bio/will-dayble-hires.jpg" target="_blank"><img src="design/images/bio/will-dayble-hires.jpg" alt="will-dayble-by-mark-lobo" width="420" height="280"></a>	
+</article>
+
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
