--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -79,7 +79,7 @@
 		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
 		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
 -->
-		<a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo Photography</a>
+		<a href="http://www.marklobo.com.au/" target="_blank">Photo Credit: Mark Lobo Photography</a>
 	</p>
 </aside>
 
@@ -93,7 +93,7 @@
 	<nav>
 	  <p><a data-nav class="btn" href="#projects">Projects <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaking">Speaking <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#contact">Contact <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#contact">Say hi <i class="ss-right"></i></a></p>
 	</nav> 
 </article>
 
@@ -114,14 +114,14 @@
 	<a data-nav class="btn btn-next" href="#speaking"><i class="ss-right"></i> Speaking</a>
 	<h2>Projects</h2>
 	<div class="projects">
-		<a href="//fitzroygsd.com"><img src="design/images/projects/gsd.png" alt="image">Founder</a>
-		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image">Founder / Director</a>
-		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="image">Advisory Board</a>
-		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image">Founder</a>
-		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image">Founder</a>
-		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image">Founder</a>	
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="image">Advisory Board</a>					
-		<a href="//soundcloud.com/bankai"><img src="design/images/projects/bankai.png" alt="image">Producer</a>
+		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
+		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder / Director</a>
+		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>Cowalition</strong> <br>Founder</a>
+		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
+		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
+		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>					
+
 	</div>
 </article>
 
@@ -140,7 +140,7 @@
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 
 	<h2>Speaking</h2>
-	<p>I design and facilitate presentations, interventions and workshops along these broad themes.</p>
+	<p>I do provocations, interventions and workshops along these themes:</p>
 	<!--
 <dl>
 		<dt>1</dt><dd>Innovation and disruption</dd>
@@ -156,7 +156,7 @@
 -->
 	<dl>
 		<dt>1</dt><dd>The Future of Digital: Where the internet / mobile  is taking us and resulting horizon questions;</dd>
-		<dt>2</dt><dd>Disruption: How innovative disruption works, when to be scared, and what it means for leadership;</dd>
+		<dt>2</dt><dd>Disruption: What disruption actually means, when to be scared, and what it means for leadership;</dd>
 		<dt>3</dt><dd>The geeky approach: How tech geeks solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture);</dd>
 		<dt>4</dt><dd>User Experience Design: Designing products for end users, user centric design / design thinking / digital + mobile-first platforms;</dd>
 		<dt>6</dt><dd>Getting things done: The subtle art of making real things instead of writing business plans;</dd>
@@ -208,7 +208,8 @@
 		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-by-mark-lobo.jpg">
 			<img class="" src="design/images/bio/will-dayble-by-mark-lobo.jpg" alt="will-dayble">
 			<i class="ss-windows"></i>
-		</a>			
+		</a>
+		<p>Photo credits: Will Coverdale (1 & 2) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (3).</p>
 	</p>				
 	
 </article>	
