--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,9 +91,9 @@
 	<p>In my spare time, I don’t have any.	</p>
 
 	<nav>
-	  <p><a data-nav class="btn" href="#projects">Projects <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#projects">My projects <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaking">Speaking <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#contact">Say hi <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#contact">Contact me <i class="ss-right"></i></a></p>
 	</nav> 
 </article>
 
@@ -116,12 +116,13 @@
 	<div class="projects">
 		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
 		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder / Director</a>
-		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
 		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>Cowalition</strong> <br>Founder</a>
 		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
+		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
 		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>					
-
+		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
+		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.png" alt="Chuffed"><strong>Fitness Everywhere</strong> <br>Board Chair</a>
 	</div>
 </article>
 
@@ -140,7 +141,7 @@
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 
 	<h2>Speaking</h2>
-	<p>I do provocations, interventions and workshops along these themes:</p>
+	<p>I blurt keynotes and do workshops along these themes:</p>
 	<!--
 <dl>
 		<dt>1</dt><dd>Innovation and disruption</dd>
@@ -155,11 +156,11 @@
 	<h3>Typical topics include</h3>
 -->
 	<dl>
-		<dt>1</dt><dd>The Future of Digital: Where the internet / mobile  is taking us and resulting horizon questions;</dd>
-		<dt>2</dt><dd>Disruption: What disruption actually means, when to be scared, and what it means for leadership;</dd>
-		<dt>3</dt><dd>The geeky approach: How tech geeks solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture);</dd>
+		<dt>1</dt><dd>Digital: Where the internet / mobile  is taking us and resulting horizon questions;</dd>
+		<dt>2</dt><dd>Disruption: What the buzzwords actually mean, when to be scared, and what it means for leadership folks;</dd>
+		<dt>3</dt><dd>The geek approach: How tech people solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture);</dd>
 		<dt>4</dt><dd>User Experience Design: Designing products for end users, user centric design / design thinking / digital + mobile-first platforms;</dd>
-		<dt>6</dt><dd>Getting things done: The subtle art of making real things instead of writing business plans;</dd>
+		<dt>6</dt><dd>Getting things done: The subtle art of making real things happen instead of writing business plans;</dd>
 		<dt>7</dt><dd>Innovation Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
 		<dt>8</dt><dd>Social impact: Doing good while doing well, within a business context, for measurable social impact;</dd>		
 	</dl>
@@ -167,7 +168,7 @@
 
 <article class="alt">
 	<blockquote>
-		<p><span class="lquo">&ldquo;</span>Will makes the tech piece accessible &amp; meaningful to leadership.&rdquo;</p>
+		<p><span class="lquo">&ldquo;</span>Will makes the tech piece accessible<br> &amp; meaningful to leadership.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/jason.png" alt="Jason">
 			- Dr. Jason Fox, 
@@ -193,7 +194,7 @@
 	<p>His clients include banking and telco giants, large and small charities, and a slew of startups across the world.</p>
 	<p>He sits on the boards of a few Australian social enterprises and mentors numerous young people in local and international startup communities.</p>
 	<p>In his spare time, Will doesn’t have any.</p>		
-
+	<hr id="pics">
 	<h3>Hi res pics</h3>
 	<p>Click to open in a new window.</p>
 	<p>
@@ -216,7 +217,7 @@
  
 <article id="speaker-rider">
 	<a data-nav class="btn btn-back" href="#speaker-bio"><i class="ss-left"></i> Speaker bio</a>
-<!-- 		<a data-nav class="btn btn-next" href="#speaker-rider"><i class="ss-right"></i> Speaker Rider</a> -->
+	<a data-nav class="btn btn-next" href="#contact"><i class="ss-right"></i> Get in touch</a>
 
 	<h2>Speaker rider</h2>
 	<p>First off, thanks for having me. It’s always a real honour, and I know we are all excited to create a top-quality, energetic event that people remember fondly for a long time afterwards.</p>
@@ -263,7 +264,7 @@
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="#"><i class="ss-left"></i> Home</a>
-	<h2>Contact</h2>
+	<h2>Get in touch</h2>
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> /willdayble</a></p>
