--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -122,7 +122,7 @@
 		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
 		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
 		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
-		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.png" alt="Chuffed"><strong>Fitness Everywhere</strong> <br>Board Chair</a>
+		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.png" alt="Chuffed"><strong>Fitness Everywhere</strong> <br>Chair, Investor</a>
 	</div>
 </article>
 
