gender definite-ness

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -223,6 +223,10 @@
 	<p>First off, thanks for having me. It’s always a real honour, and I know we are all excited to create a top-quality, energetic event that people remember fondly for a long time afterwards.</p>
 	<p>Here are some simple requirements and suggestions that will help us to create a great atmosphere, and prevent a few common misunderstandings and technical glitches.</p>
 	<p>Please read this carefully, and get in touch if I can help out in any way.</p>
+	<h3>Gender</h3>
+	<p>First up: I will not speak at any event with only male speakers, nor will I be part of a panel with only male presenters.</p> 
+	<p>While this is non-negotiable, if you&rsquo;re putting together an event and want some diversity, hit me up and I can help you source some great people.</p>
+
 	<h3>Audio visual</h3>
 	<p>I generally use my own laptop and clicker, and have my own VGA and DVI cable adaptors (I use a recent MacBook Air). If I must use your presentation tech, please ensure we are using an up to date version of Keynote, with a quality clicker ahead of time.</p>
 	<p>I do not usually require sound output. I will let you know ahead of time if I do.</p>
