--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,7 +91,7 @@
 	<p>In my spare time, I don’t have any.	</p>
 
 	<nav>
-	  <p><a data-nav class="btn" href="#projects">My projects <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaking">Speaking <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#contact">Contact me <i class="ss-right"></i></a></p>
 	</nav> 
@@ -109,19 +109,22 @@
 	</blockquote>		
 </article>
 
-<article id="projects">
+<article id="work">
 	<a data-nav class="btn btn-back" href="#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="#speaking"><i class="ss-right"></i> Speaking</a>
-	<h2>Projects</h2>
+	<h2>Work</h2>
+	<p>Most of my time is spent with <a href="//fitzroyacademy.com">The Fitzroy Academy</a>, but I do a few things:</p>
 	<div class="projects">
 		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
 		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder / Director</a>
 		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>Cowalition</strong> <br>Founder</a>
+<!--
 		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
 		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
 		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
+-->
 		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
 		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.png" alt="Chuffed"><strong>Fitness Everywhere</strong> <br>Chair, Investor</a>
 	</div>
 </article>
